# EV-range-anxiety

./: .Rhistory  .gitignore  DATASET_DESCRIPTION.md  LICENSE  dataset_description.md  path_manager.py  pyproject.toml  readme.md
ML and simulink models/current_based_ML_models/: machine_learning_current.ipynb  machine_learning_plot.ipynb
ML and simulink models/velocity_based_ML_models/: V_Model-1_Time-Resolved_mape_results_all_models.txt
ML_and_simulink_models/MATLAB_simulink_model/: Sun_Lab_EV_Car.slx
misc/: C1_300_800s.npz  C2_300_800s.npz  Classification_features_test.txt  Classification_features_train.txt  Cons_brk_tests.ipynb  Cut_data.ipynb  Database_create.ipynb  FTP.csv  Hemanth_loop_updated.ipynb  Information data.csv  MATLAB_ftp.csv  ML_classification.ipynb  ML_velocity.ipynb  RF_current_1.npz  RF_current_2.npz  RF_velocity_1.npz  RF_velocity_2.npz  Test_data_create.ipynb  Vel_features.csv  Velocity_calcs.ipynb  Velocity_database.ipynb  battery_dataset.ipynb  cons_vel_test.ipynb  current_model_1.npz  current_model_2.npz  evdataset_coeffcalc.xlsx - Sheet1.csv  forecast_data_create.ipynb  plot1.npy  plot2.npy  plot_gen.ipynb  plot_gen_2.ipynb  predictions_and_labels_for_battery_data+classification.npz  predictions_and_labels_for_battery_data.npz  v1_300_800s.npz  v2_300_800s.npz  velocity_data.csv  velocity_forecasting_input_test.csv  velocity_model_1.npz  velocity_model_1_early_prediction.csv  velocity_model_1_results(all_models).npz  (+5 more)
misc/current_forecast_results/: y_val_actual.h5  (+7 more)
sample_data/: sample_battery_data(processed).csv  sample_velocity_data.xlsx
(+218 files in other folders)
